<?xml version="1.0" encoding="utf-8"?><!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Temp Conversion</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">SWITCHHED UPP</string>
    <string name="hello_blank_2_fragment">SWITCHHED 2 UPP</string>
    <string name="send">CONVERT</string>
    <string name="message">Add a value in celcius</string>
    <string name="conversion_txtview" />
    <string name="farenheit_txtview"/>
    <string name="toast_message">Please enter a number</string>
    <string name="farenheit_string">Enter a value in Farenheit</string>

</resources>